# KRINS-Chronicle-Keeper

./: .editorconfig  .env.example  .env.production  .env.template  .gitignore  .mcp.json  AI_TEAM_MISSION_BRIEFING.md  ARCHITECTURAL-MAPPING.md  BUILD-STATUS.md  CLAUDE.md  CODEOWNERS  Dockerfile 2  INTEGRATION-STATUS 2.md  KRINS-CAPABILITIES.md  KRINS-Chronicle-Keeper-V2.0-BACKUP-MANIFEST.md  KRINS-WORKFLOW.md  Makefile  RAILWAY_DEPLOYMENT.md  README-DOCS.md  README.md  SYSTEM-STATUS.md  bunfig.toml  docker-compose.production.yml  docker-compose.yml  generate-chat-app.js  navigate-layers.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  vercel.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit  pre-commit-enhanced
.github/: pull_request_template.md
AI_INTEGRATION/: README.md  adr-parser.ts  code-generation-advisor.ts  context-provider.ts  onboarding-intelligence.ts  tools-links.md  unified-ai-launcher.js  workflow.sh
DECISION_MANAGEMENT/: README.md  adr_new.sh  decision-impact-tracker.ts  decision-linker.ts  decision-tracker.ts  evidence-collector.ts  workflow.sh
GOVERNANCE_PROCESS/: README.md  architectural-advisor.ts  decision-validator.ts  dynamic-codeowners-manager.ts  governance-orchestrator.ts  risk-assessment-engine.ts
KNOWLEDGE_ORGANIZATION/: README.md  ml-pattern-recognizer.ts  pattern-learning-pipeline.ts  tools-links.md  workflow.sh
KRINS-BACKUP-100-PERCENT-COMPLETE-20250909_135442/: Dockerfile
trading-platform/rust-orderbook-core/: Cargo.toml
trading-platform/rust-orderbook-core/src/: lib.rs
(+1029 files in other folders)
